Fix: keep LQIP visible until all carousel images loaded;    prevent black flash between LQIP and slideshow start

--- a/netlify/functions/preview/src/sass/components/_banner.scss
+++ b/netlify/functions/preview/src/sass/components/_banner.scss
@@ -7,6 +7,7 @@
 
 .picture-wrap {
     position: relative;
+    background-color: #000;
 
     &::before {
         content: '';
